--- a/docs/01.markdown
+++ b/docs/01.markdown
@@ -2,6 +2,14 @@
 
 Add lifty as a global plugin so you can use it in all of your sbt projects. You do so by adding the following line to your `~/.sbt/plugins/build.sbt` file
 
-	addSbtPlugin("org.lifty" % "lifty" % "1.7.4")
+    resolvers += Resolver.url("sbt-plugin-releases", new URL("http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases/"))(Resolver.ivyStylePatterns)
+  
+    addSbtPlugin("org.lifty" % "lifty" % "1.7.4")
+
+Or if you want to try the SNAPSHOT version    
+
+  	resolvers += Resolver.url("sbt-plugin-snapshots", new URL("http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-snapshots/"))(Resolver.ivyStylePatterns)
+  
+    addSbtPlugin("org.lifty" % "lifty" % "1.7.5-SNAPSHOT")
 
 Whenever you're in a SBT session you now have the lifty command avaiable. The lifty command has tab-completion enabled to make it faster/easier to use. Try typing lifty and hit tab in an SBT session.
